--- a/build.yaml
+++ b/build.yaml
@@ -3,7 +3,11 @@ gems:
 
 repositories:
   remote:
+   - http://repo.fire.dse.vic.gov.au/content/groups/fisg
    - http://www.ibiblio.org/maven2
+  release_to:
+    url: http://repo.fire.dse.vic.gov.au/content/repositories/releases/
+    username: upload
 
 artifacts:
   javax_inject: javax.inject:javax.inject:jar:1
