--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,10 @@ artifacts:
   javax_annotation: com.google.code.findbugs:jsr305:jar:1.3.9
   gwt_user: com.google.gwt:gwt-user:jar:2.3.0
 
+  # Encoding on the server
+  json: org.json:json:jar:20090211
+
+  # Testing encoding on the server
+  jsonpath: com.jayway.jsonpath:json-path:jar:0.5.5
+  json_smart: net.minidev:json-smart:jar:1.0.9
+
