--- a/build.yaml
+++ b/build.yaml
@@ -25,3 +25,6 @@ artifacts:
   jsonpath: com.jayway.jsonpath:json-path:jar:0.5.5
   json_smart: net.minidev:json-smart:jar:1.0.9
 
+  #
+  # Mocking library
+  mockito: org.mockito:mockito-all:jar:1.8.5
