Add a jackson Date serializer that generates dates in formats in the format expected by RDate

--- a/build.yaml
+++ b/build.yaml
@@ -28,3 +28,8 @@ artifacts:
   #
   # Mocking library
   mockito: org.mockito:mockito-all:jar:1.8.5
+
+  #
+  # Jackson library
+  jackson_core: org.codehaus.jackson:jackson-core-asl:jar:1.9.4
+  jackson_mapper: org.codehaus.jackson:jackson-mapper-asl:jar:1.9.4
