--- a/build.yaml
+++ b/build.yaml
@@ -28,4 +28,4 @@ artifacts:
   jackson_mapper: org.codehaus.jackson:jackson-mapper-asl:jar:1.9.4
 
   # JEE7 json library
-  javax_json: org.glassfish:javax.json:jar:1.0-b02
+  javax_json: org.glassfish:javax.json:jar:1.0.3
