Introduce ReplicantSession an base class from which sessions should extend.

--- a/build.yaml
+++ b/build.yaml
@@ -27,3 +27,5 @@ artifacts:
 
   # JEE7 json library
   javax_json: org.glassfish:javax.json:jar:1.0.3
+
+  simple_session_filter: org.realityforge.ssf:simple-session-filter:jar:0.2
