--- a/build.yaml
+++ b/build.yaml
@@ -33,3 +33,5 @@ artifacts:
   javax_json: org.glassfish:javax.json:jar:1.0.3
 
   simple_session_filter: org.realityforge.ssf:simple-session-filter:jar:0.2
+
+  gwt_property_source: org.realityforge.gwt.property-source:gwt-property-source:jar:0.2
