--- a/build.yaml
+++ b/build.yaml
@@ -7,6 +7,9 @@ artifacts:
   javax_javaee: javax:javaee-api:jar:7.0
 
   gwt_user: com.google.gwt:gwt-user:jar:2.6.1
+  gwt_dev: com.google.gwt:gwt-dev:jar:2.6.1
+  javax_validation: javax.validation:validation-api:jar:1.0.0.GA
+  javax_validation_sources: javax.validation:validation-api:jar:sources:1.0.0.GA
 
   #
   # GIN and associated dependencies
