--- a/build.yaml
+++ b/build.yaml
@@ -3,7 +3,7 @@ repositories:
    - http://repo1.maven.org/maven2
 
 artifacts:
-  javax_annotation: com.google.code.findbugs:jsr305:jar:3.0.0
+  javax_jsr305: com.google.code.findbugs:jsr305:jar:3.0.0
   javax_javaee: javax:javaee-api:jar:7.0
 
   gwt_user: com.google.gwt:gwt-user:jar:2.7.0
