--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,11 @@
 repositories:
   remote:
    - http://repo1.maven.org/maven2
+   - https://stocksoftware.artifactoryonline.com/stocksoftware/public
 
 artifacts:
+  idea_codestyle: au.com.stocksoftware.idea.codestyle:idea-codestyle:xml:1.3
+
   javax_jsr305: com.google.code.findbugs:jsr305:jar:3.0.0
   javax_javaee: javax:javaee-api:jar:7.0
 
