--- a/build.yaml
+++ b/build.yaml
@@ -40,3 +40,16 @@ artifacts:
   gwt_webpoller: org.realityforge.gwt.webpoller:gwt-webpoller:jar:0.9.1
 
   field_filter: org.realityforge.rest.field_filter:rest-field-filter:jar:0.4
+
+  objenesis: org.objenesis:objenesis:jar:2.5.1
+
+  powermock_core: org.powermock:powermock-core:jar:1.6.6
+  powermock_reflect: org.powermock:powermock-reflect:jar:1.6.6
+  powermock_testng_common: org.powermock:powermock-module-testng-common:jar:1.6.6
+  powermock_testng: org.powermock:powermock-module-testng:jar:1.6.6
+  powermock_testng_agent: org.powermock:powermock-module-testng-agent:jar:1.6.6
+  powermock_api_mockito: org.powermock:powermock-api-mockito:jar:1.6.6
+  powermock_api_mockito_common: org.powermock:powermock-api-mockito-common:jar:1.6.6
+  powermock_api_support: org.powermock:powermock-api-support:jar:1.6.6
+  javassist: org.javassist:javassist:jar:3.21.0-GA
+  powermock_module_javaagent: org.powermock:powermock-module-javaagent:jar:1.6.6
