--- a/build.yaml
+++ b/build.yaml
@@ -36,6 +36,13 @@ artifacts:
 
   simple_session_filter: org.realityforge.ssf:simple-session-filter:jar:0.9
 
+  keycloak_core: org.keycloak:keycloak-core:jar:2.0.0.Final
+  keycloak_common: org.keycloak:keycloak-common:jar:2.0.0.Final
+  keycloak_adapter_core: org.keycloak:keycloak-adapter-core:jar:2.0.0.Final
+  keycloak_adapter_spi: org.keycloak:keycloak-adapter-spi:jar:2.0.0.Final
+
+  simple_keycloak_service: org.realityforge.keycloak.sks:simple-keycloak-service:jar:0.1
+
   gwt_property_source: org.realityforge.gwt.property-source:gwt-property-source:jar:0.2
 
   gwt_webpoller: org.realityforge.gwt.webpoller:gwt-webpoller:jar:0.9.1
