--- a/build.yaml
+++ b/build.yaml
@@ -13,9 +13,15 @@ artifacts:
   gwt_user: com.google.gwt:gwt-user:jar:2.8.2
   gwt_dev: com.google.gwt:gwt-dev:jar:2.8.2
 
-  #
-  # GIN and associated dependencies
-  gwt_gin: com.google.gwt.inject:gin:jar:2.1.2
+  javapoet: com.squareup:javapoet:jar:1.8.0
+  guava: com.google.guava:guava:jar:21.0
+  dagger_core: com.google.dagger:dagger:jar:2.13
+  dagger_producers: com.google.dagger:dagger-producers:jar:2.13
+  dagger_compiler: com.google.dagger:dagger-compiler:jar:2.13
+  dagger_googlejavaformat: com.google.googlejavaformat:google-java-format:jar:1.4
+  dagger_errorprone: com.google.errorprone:javac-shaded:jar:9-dev-r4023-3
+  dagger_gwt: com.google.dagger:dagger-gwt:jar:2.13
+
   google_guice: com.google.inject:guice:jar:3.0
   google_guice_assistedinject: com.google.inject.extensions:guice-assistedinject:jar:3.0
   aopalliance: aopalliance:aopalliance:jar:1.0 # Required for guice
