--- a/build.yaml
+++ b/build.yaml
@@ -16,16 +16,14 @@ artifacts:
   javapoet: com.squareup:javapoet:jar:1.8.0
   guava: com.google.guava:guava:jar:21.0
   dagger_core: com.google.dagger:dagger:jar:2.13
-  dagger_producers: com.google.dagger:dagger-producers:jar:2.13
-  dagger_compiler: com.google.dagger:dagger-compiler:jar:2.13
-  dagger_googlejavaformat: com.google.googlejavaformat:google-java-format:jar:1.4
-  dagger_errorprone: com.google.errorprone:javac-shaded:jar:9-dev-r4023-3
+  dagger_core_sources: com.google.dagger:dagger:jar:sources:2.13
   dagger_gwt: com.google.dagger:dagger-gwt:jar:2.13
 
   google_guice: com.google.inject:guice:jar:3.0
   google_guice_assistedinject: com.google.inject.extensions:guice-assistedinject:jar:3.0
   aopalliance: aopalliance:aopalliance:jar:1.0 # Required for guice
   javax_inject: javax.inject:javax.inject:jar:1
+  javax_inject_sources: javax.inject:javax.inject:jar:sources:1
 
   # Test deps
   jndikit: org.realityforge.jndikit:jndikit:jar:1.4
