Remove gwt classifier from braincheck

--- a/build.yaml
+++ b/build.yaml
@@ -46,7 +46,7 @@ artifacts:
   arez_extras: org.realityforge.arez:arez-extras:jar:0.73
   arez_browser_extras: org.realityforge.arez:arez-browser-extras:jar:0.73
 
-  braincheck: org.realityforge.braincheck:braincheck:jar:gwt:1.5.0
+  braincheck: org.realityforge.braincheck:braincheck:jar:1.5.0
 
   anodoc: org.realityforge.anodoc:anodoc:jar:1.0.0
 
