--- a/build.yaml
+++ b/build.yaml
@@ -53,6 +53,9 @@ artifacts:
   react4j_arez: org.realityforge.react4j:react4j-arez:jar:0.62
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.62
 
+  jsinterop_annotations: com.google.jsinterop:jsinterop-annotations:jar:1.0.2
+  jsinterop_annotations_sources: com.google.jsinterop:jsinterop-annotations:jar:sources:1.0.2
+
   jsinterop_base: com.google.jsinterop:base:jar:1.0.0-RC1
   jsinterop_base_sources: com.google.jsinterop:base:jar:sources:1.0.0-RC1
 
