--- a/build.yaml
+++ b/build.yaml
@@ -8,7 +8,7 @@ repositories:
 artifacts:
   idea_codestyle: au.com.stocksoftware.idea.codestyle:idea-codestyle:xml:1.12
 
-  javax_jsr305: com.google.code.findbugs:jsr305:jar:3.0.1
+  javax_annotation: org.realityforge.javax.annotation:javax.annotation:jar:1.0.0
   javax_javaee: javax:javaee-api:jar:7.0
 
   gwt_user: com.google.gwt:gwt-user:jar:2.8.2
