--- a/build.yaml
+++ b/build.yaml
@@ -7,7 +7,7 @@ repositories:
 artifacts:
   idea_codestyle: au.com.stocksoftware.idea.codestyle:idea-codestyle:xml:1.13
 
-  javax_annotation: org.realityforge.javax.annotation:javax.annotation:jar:1.0.0
+  javax_jsr305: org.realityforge.javax.annotation:javax.annotation:jar:1.0.0
   javax_javaee: javax:javaee-api:jar:7.0
 
   gwt_user: com.google.gwt:gwt-user:jar:2.8.2
