Entity utilities have been moved to arez-entity

--- a/build.yaml
+++ b/build.yaml
@@ -27,6 +27,7 @@ artifacts:
   arez_core: org.realityforge.arez:arez-core:jar:0.93
   arez_processor: org.realityforge.arez:arez-processor:jar:0.93
   arez_component: org.realityforge.arez:arez-component:jar:0.93
+  arez_entity: org.realityforge.arez:arez-entity:jar:0.93
 
   react4j_annotation: org.realityforge.react4j:react4j-annotations:jar:0.78
   react4j_core: org.realityforge.react4j:react4j-core:jar:0.78
