--- a/build.yaml
+++ b/build.yaml
@@ -43,7 +43,7 @@ artifacts:
 
   braincheck: org.realityforge.braincheck:braincheck:jar:1.9.0
 
-  jetbrains_annotations: org.jetbrains:annotations:jar:15.0
+  jetbrains_annotations: org.realityforge.org.jetbrains.annotations:org.jetbrains.annotations:jar:1.0.0
 
   #
   # Mocking library
