--- a/build.yaml
+++ b/build.yaml
@@ -30,7 +30,7 @@ artifacts:
   react4j_core: org.realityforge.react4j:react4j-core:jar:0.139
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.139
 
-  jsinterop_annotations: com.google.jsinterop:jsinterop-annotations:jar:1.0.2
+  jsinterop_annotations: org.realityforge.com.google.jsinterop:jsinterop-annotations:jar:2.8.2-v20191108
 
   jsinterop_base: com.google.jsinterop:base:jar:1.0.0
 
