--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - rvm use 2.3.1
   - gem install bundler
   - bundle install
-script: buildr package jacoco:report error_codes:check_duplicates
+script: buildr package jacoco:report
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 git:
