--- a/build.yaml
+++ b/build.yaml
@@ -43,6 +43,8 @@ artifacts:
   grim_annotations: org.realityforge.grim:grim-annotations:jar:0.04
   grim_processor: org.realityforge.grim:grim-processor:jar:0.04
 
+  gwt_keycloak: org.realityforge.gwt.keycloak:gwt-keycloak:jar:0.5
+
   jetbrains_annotations: org.realityforge.org.jetbrains.annotations:org.jetbrains.annotations:jar:1.5.0
 
   #
