--- a/build.yaml
+++ b/build.yaml
@@ -26,6 +26,8 @@ artifacts:
   arez_core: org.realityforge.arez:arez-core:jar:0.170
   arez_processor: org.realityforge.arez:arez-processor:jar:0.170
 
+  arez_testng: org.realityforge.arez.testng:arez-testng:jar:0.01
+
   react4j_core: org.realityforge.react4j:react4j-core:jar:0.151
   react4j_processor: org.realityforge.react4j:react4j-processor:jar:0.151
 
