--- a/build.yaml
+++ b/build.yaml
@@ -45,6 +45,8 @@ artifacts:
   grim_annotations: org.realityforge.grim:grim-annotations:jar:0.04
   grim_processor: org.realityforge.grim:grim-processor:jar:0.04
 
+  zemeckis: org.realityforge.zemeckis:zemeckis-core:jar:0.04
+
   gwt_keycloak: org.realityforge.gwt.keycloak:gwt-keycloak:jar:0.7
 
   jetbrains_annotations: org.realityforge.org.jetbrains.annotations:org.jetbrains.annotations:jar:1.6.0
