--- a/build.yaml
+++ b/build.yaml
@@ -39,6 +39,7 @@ artifacts:
 
   braincheck_core: org.realityforge.braincheck:braincheck-core:jar:1.30.0
   braincheck_jre: org.realityforge.braincheck:braincheck-jre:jar:1.30.0
+  braincheck_testng: org.realityforge.braincheck:braincheck-testng:jar:1.30.0
 
   grim_annotations: org.realityforge.grim:grim-annotations:jar:0.05
   grim_processor: org.realityforge.grim:grim-processor:jar:0.05
