Upgrade the version of mockito in use

--- a/build.yaml
+++ b/build.yaml
@@ -49,7 +49,9 @@ artifacts:
 
   #
   # Mocking library
-  mockito: org.mockito:mockito-all:jar:1.10.19
+  mockito: org.mockito:mockito-core:jar:4.5.1
+  byte_buddy: net.bytebuddy:byte-buddy:jar:1.12.9
+  objenesis: org.objenesis:objenesis:jar:3.2
 
   keycloak_core: org.keycloak:keycloak-core:jar:2.0.0.Final
   keycloak_common: org.keycloak:keycloak-common:jar:2.0.0.Final
