--- a/build.yaml
+++ b/build.yaml
@@ -10,8 +10,8 @@ artifacts:
   javax_annotation: org.realityforge.javax.annotation:javax.annotation:jar:1.0.1
   javax_javaee: javax:javaee-api:jar:8.0
 
-  gwt_user: com.google.gwt:gwt-user:jar:2.9.0
-  gwt_dev: com.google.gwt:gwt-dev:jar:2.9.0
+  gwt_user: org.gwtproject:gwt-user:jar:2.10.0
+  gwt_dev: org.gwtproject:gwt-dev:jar:2.10.0
 
   # Test deps
   jndikit: org.realityforge.jndikit:jndikit:jar:1.4
